<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saraglattstein.c4_p29.MainActivity">

    <LinearLayout
        android:layout_width="231dp"
        android:layout_height="245dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Spanish" />

        <Button
            android:id="@+id/btn_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/French" />

        <Button
            android:id="@+id/btn_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Italian" />

        <Button
            android:id="@+id/btn_prt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Portuguese" />

        <Button
            android:id="@+id/btn_gr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/German" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
